lottery.css
.interface {
  white-space: pre;
  font-family: monospace;
}

.anchor, .interactive {
  display: inline;
  position: relative;
}

.anchor-child {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  text-align: center;
}

.interactive {
  cursor: pointer;
  text-decoration: underline;
}

.interactive:hover {
  font-weight: bold;
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: black;
    color: white;
  }
}

